[project]
name = "xmol-literature"
version = "0.1.0"
description = "基于MCP的文献检索和问答系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "XMol团队"}
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "mcp>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "mcp[cli]>=1.6.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100

[project.scripts]
xmol-server = "xmol.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xmol"]
